--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -25,10 +25,13 @@
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.0",
     "cors-anywhere": "^0.4.1",
+    "d3-scale": "^3.2.1",
+    "d3-time": "^1.1.0",
     "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "^3.3.0",
+    "react-stockcharts": "^0.7.8",
     "sodium-native": "^2.4.9",
     "typescript": "^3.8.3"
   },
