--- a/lisk-dex-electron/package.json
+++ b/lisk-dex-electron/package.json
@@ -25,8 +25,8 @@
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.0",
     "cors-anywhere": "^0.4.1",
-    "d3-scale": "^3.2.1",
-    "d3-time": "^1.1.0",
+    "d3-format": "^1.4.4",
+    "d3-time-format": "^2.2.3",
     "electron-is-dev": "^1.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
